# rl-recommender-systems

./: .dockerignore  .gitignore  2.9  Dockerfile  README.md  constant.py  dependencies.txt  deps.txt  predicting_utils.py  pyproject.toml  step-by-step-reinforcement-learning-recommender-systems.ipynb
src/artifacts/: policy_specs.pbtxt  saved_model.pb
src/artifacts/profiler/: events.out.tfevents.1649271857.LAPTOP-RROO26FL.profile-empty
src/artifacts/profiler/plugins/profile/2022_04_06_19_04_17/: LAPTOP-RROO26FL.overview_page.pb  LAPTOP-RROO26FL.tensorflow_stats.pb
src/artifacts/profiler/plugins/profile/2022_04_07_10_42_01/: LAPTOP-RROO26FL.overview_page.pb  LAPTOP-RROO26FL.tensorflow_stats.pb
src/artifacts/profiler/plugins/profile/2022_04_07_10_50_14/: LAPTOP-RROO26FL.overview_page.pb  LAPTOP-RROO26FL.tensorflow_stats.pb
src/artifacts/variables/: variables.data-00000-of-00001  variables.index
src/modeling/: constant.py  train_rl_model.py
src/plotting/: plotting_utils.py
src/predicting/: predicting_utils.py
