[tool.poetry]
name = "rl-recommender-systems"
version = "0.1.0"
description = "Code for demo tf-agent with MovieLens dataset"
authors = ["Yu-Cheng Tsai<yuchengtsai84s@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tf-agents = "^0.8.0"
tensorflow = "2.5.0"
jupyterlab = "^3.4.2"
voila = "^0.3.5"
matplotlib = "^3.5.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"